--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.3",
     "nodemon": "^3.1.4",
+    "prisma": "^5.17.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
