--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,15 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mailgen": "^2.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.0.3",
+    "@types/nodemailer": "^6.4.15",
+    "@types/validator": "^13.12.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
     "rimraf": "^6.0.1",
@@ -26,9 +32,15 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
+    "validator": "^13.12.0",
+    "zod": "^3.23.8"
   }
 }
