--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     /* Modules Config */
-    "target": "ES2021",
+    "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "src",
@@ -12,18 +12,23 @@
     "strict": true,
     "skipLibCheck": true,
     "noEmitOnError": true,
-    "noImplicitAny": true,
     "strictNullChecks": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
     "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
-    "removeComments": true
+    "removeComments": true,
 
     /* Paths Alias */
-    // "baseUrl": ".",
-    // "paths": {}
+    "typeRoots": ["node_modules/@types", "src/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@config": ["src/config"]
+    },
+    "plugins": [{ "transform": "typescript-transform-paths" }]
   },
 
   /* Files to Include */
