--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mailgen": "^2.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^22.0.3",
     "@types/nodemailer": "^6.4.15",
     "@vitest/coverage-v8": "^2.0.5",
@@ -55,7 +56,9 @@
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
