--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,21 @@
 FROM node:20-alpine
+
+# RUN addgroup app && adduser -S -G app app
+
+# USER app
+
 WORKDIR /app
-COPY ./package*.json ./
+
+COPY package.json package-lock.json ./
+
+# USER root
+
+# RUN chown -R app:app .
+
+# USER app
+
 RUN npm install
+
 COPY . .
-EXPOSE 5173
+
 CMD ["npm", "run", "dev"]
