--- a/compose.yml
+++ b/compose.yml
@@ -1,66 +1,4 @@
-version: '3.9'
 services:
-  # Express Container  
-  backend:
-    build:
-      context: './server'
-      dockerfile: Dockerfile
-    image: backend
-    restart: always
-    ports:
-      - 4000:4000
-      - 9229:9229
-    env_file:
-      - ./server/.env
-    container_name: chatapp_server
-    networks:
-      - chatapp
-    volumes:
-      - /app/node_modules
-    develop:
-      watch:
-        - action: rebuild
-          path: ./server/package.json
-        - action: rebuild
-          path: ./server/package-lock.json
-        - action: sync
-          path: ./server
-          target: /app
-          ignore:
-            - node_modules/
-            - dist/
-    depends_on:
-      - db
-  # React Container
-  frontend:
-    build:
-      context: './client'
-      dockerfile: Dockerfile
-    image: frontend
-    restart: always
-    ports:
-      - 5173:5173
-    env_file:
-      - ./client/.env
-    container_name: chatapp_client
-    networks:
-      - chatapp
-    volumes:
-      - /app/node_modules
-    develop:
-      watch:
-        - action: rebuild
-          path: ./client/package.json
-        - action: rebuild
-          path: ./client/package-lock.json
-        - action: sync
-          path: ./client
-          target: /app
-          ignore:
-            - node_modules/
-            - dist/
-    depends_on:
-    - db
   # Postgres Container
   db:
     image: postgres
@@ -76,6 +14,8 @@ services:
       - postgres_data:/var/lib/postgresql/data
   # Adminer Container
   adminer:
+    depends_on:
+      - db
     image: adminer
     restart: always
     ports:
@@ -83,10 +23,64 @@ services:
     container_name: chatapp_adminer
     networks:
       - chatapp
+  # Express Container  
+  backend:
     depends_on:
       - db
+    build:
+      context: './server'
+      dockerfile: Dockerfile
+    image: chatapp_backend
+    restart: always
+    ports:
+      - 4000:4000
+      - 9229:9229
+    env_file:
+      - ./server/.env
+    container_name: chatapp_server
+    networks:
+      - chatapp
+    develop:
+      watch:
+        - action: sync
+          path: ./server
+          target: /app
+          ignore:
+            - node_modules/
+            - dist/
+        - action: rebuild
+          path: ./server/package.json
+        - action: rebuild
+          path: ./server/package-lock.json
+  # React Container
+  frontend:
+    depends_on:
+      - backend
+    build:
+      context: './client'
+      dockerfile: Dockerfile
+    image: frontend
+    restart: always
+    ports:
+      - 5173:5173
+    env_file:
+      - ./client/.env
+    container_name: chatapp_client
+    networks:
+      - chatapp
+    develop:
+      watch:
+        - action: sync
+          path: ./client
+          target: /app
+          ignore:
+            - node_modules/
+            - dist/
+        - action: rebuild
+          path: ./client/package.json
+        - action: rebuild
+          path: ./client/package-lock.json
 networks:
   chatapp:
 volumes:
   postgres_data:
-  
